--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 #box {
   position: absolute;
-  height: 600px;
+  height: 680px;
   width: 900px;
   left: 50%;
   margin: 0px 0px 0px -450px;
@@ -105,21 +105,19 @@ svg {
 }
 
 .tablinks {
-  border-top: 7px solid #D6DBDF;
+  border-top: 7px solid #F27060;
+  color: #283747;
   float: left;
   padding-top: 15px;
-  color: #AEB6BF;
   text-decoration: none;
   font-size: 14px;
-  transition:all 1s ease;
+  transition: all 0.5s ease;
 }
 
-.active, .tablinks:hover {
-  border-top: 7px solid #ED346C;
-  padding-top: 15px;
-  color: #283747;
-  margin-top: 0px;
-  transition:all 1s ease;
+.tablinks:hover {
+  font-weight: 900;
+  color: #F27060;
+  font-size: 105%;
 }
 
 h2 {
@@ -137,6 +135,15 @@ h1 {
   font-weight: 100;
   font-size: 30px;
   letter-spacing: 1px;
+  padding: 10px 20px 5px 50px;
+  margin: 10px 20px 5px 20px;
+}
+
+p {
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 2;
+  text-align: justify;
   padding: 10px 20px 5px 50px;
   margin: 10px 20px 5px 20px;
 }
@@ -193,5 +200,159 @@ label:hover{
 	position: relative;
 	padding-left: 10px;
   font-family: Raleway, sans-serif;
-  color: #ED346C;
+  color: #F27060;
+}
+
+.prep {
+  font-size: 14px;
+  line-height: 2;
+  text-align: justify;
+  padding: 20px 20px 20px 20px;
+  margin: 20px 20px 20px 70px;
+  border-left: 1px solid #D6DBDF;
+}
+
+#scroll {
+  overflow: auto;
+  height: 325px;
+}
+
+::-webkit-scrollbar {
+    width: 7px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #AEB6BF;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #F27060;
+}
+
+h3 {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-style: bold;
+  padding: 0px 0px 0px 30px;
+  margin: 0px 0px 0px 20px;
+}
+
+.gda-widget {
+  margin-bottom: 20px;
+  margin-top: 40px;
+  padding: 30px 0px 0px 80px;
+}
+
+.gda-widget .gda-values-list {
+  padding-bottom: 12px;
+}
+
+.gda-widget .gda-values-list:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+.gda-widget .gda-values-list li {
+  list-style-type: none;
+  color: #000;
+  position: relative;
+  line-height: 1;
+  text-align: center;
+  float: left;
+  width: 48px;
+  height: 68px;
+  margin-right: 3px;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-image: url('gda-sprite.png');
+}
+
+.gda-widget .gda-values-list li .heading {
+  display: block;
+  font-size: 10px;
+  padding-top: 7px;
+}
+
+.gda-widget .gda-values-list li .value {
+  display: block;
+  font-size: 17px;
+  padding-top: 6px;
+  font-weight: bold;
+}
+
+.gda-widget .gda-values-list li .percentage {
+  display: block;
+  font-size: 15px;
+  position: absolute;
+  bottom: -1px;
+  width: 50px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.gda-widget .gda-values-list li .kj {
+  padding-top: 4px;
+}
+
+.gda-widget .gda-values-list li .kj,
+.gda-widget .gda-values-list li .kcal {
+  display: block;
+  font-weight: bold;
+  font-size: 11px;
+}
+
+.gda-widget .gda-values-list li.energy {
+  background-position: -96px 0;
+}
+
+.gda-widget .gda-values-list li.low {
+  background-position: 0px 0;
+}
+
+.gda-widget .gda-values-list li.medium {
+  background-position: -48px 0;
+}
+
+.gda-widget .gda-values-list li.high {
+  background-position: -96px 0;
+}
+
+.gda-widget .gda-reference {
+  font-size: 13px;
+  line-height: 1.2;
+  color: #666;
+  margin: auto;
+}
+
+#footer {
+  width: 900px;
+  position: absolute;
+  bottom: 0px;
+}
+
+hr {
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(40, 60, 86, 1), rgba(0, 0, 0, 0));
+}
+
+footer a {
+  text-decoration: none;
+  color: #283747;
+}
+
+footer p {
+  text-align: center;
+  font-size: 12px;
+  font-family: 'Slabo 27px', serif;
+  line-height: 1.5;
+  padding: 0;
+  margin: 0;
+  color: #283747;
+  font-weight: 500;
 }
